--- a/style.css
+++ b/style.css
@@ -1,9 +1,74 @@
+html{
+  height:100%;
+}
 
-html, body{
+body{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight:bold;
+  margin:0;
+  padding:0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+
+   background: linear-gradient(to left top, rgba(19, 41, 76, 0.9), rgba(232, 74, 39, 0.9)) fixed !important;
+   background: -webkit-linear-gradient(to left top, #13294c, #e84a27) fixed !important;
+   background: -moz-linear-gradient(to left top, #13294c, #e84a27) fixed !important;
+   background: -ms-linear-gradient(to left top, #13294c, #e84a27) fixed !important;
+   background: -o-linear-gradient(to left top, #13294c, #e84a27) fixed !important;
+
+
 
 }
+
+#bg-left{
+  opacity: .1;
+  min-height: 100%;
+  height: 100%;
+  background-color:#13294c;
+  width:1%;
+  position: fixed;
+  top:0;
+  left: 0;
+}
+
+#bg-right{
+  opacity: .1;
+  min-height: 100%;
+  height: 100%;
+  background-color:#e84a27;
+  width:1%;
+  position: fixed;
+  top:0;
+  left: 99%;
+}
+
+
+.jumbotron{
+  background:none !important;
+  opacity: .9;
+  border-color: #0c1e82;
+  color: #ecf0f1;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  border-radius: .3em;
+  margin-top: 40px;
+  margin-left: 100px;
+  margin-right: 100px;
+  line-height: 1.5;
+
+}
+/* Second Color #13294c */
+.jumbotron h1{
+  text-align: center;
+}
+
 text {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  fill: #ecf0f1;
 }
 
 /* .charts {
@@ -14,6 +79,7 @@ text {
 
 .slider {
   text-align: center;
+
 }
 
 
