--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@ text {
 
 } */
 
+.author{
+  text-align: center;
+  font-style: italic;
+  display: block;
+}
+
 .slider {
   text-align: center;
 
