Adding year display at bottom

--- a/style.css
+++ b/style.css
@@ -96,6 +96,13 @@ text {
   margin-bottom: 150px;
 }
 
+#sliderYears{
+  fill:#ecf0f1 !important;
+text-align: center !important;
+
+
+}
+
 
 .charts {
     margin-top:40px;
