Working dynamic title and more data in tooltip

--- a/style.css
+++ b/style.css
@@ -96,11 +96,10 @@ text {
   margin-bottom: 150px;
 }
 
-#sliderYears{
-  fill:#ecf0f1 !important;
-text-align: center !important;
-
-
+#slider #sliderYears{
+  color:#ecf0f1 !important;
+  text-align: center !important;
+  font-weight: bold;
 }
 
 
